# mandelbrot.rs

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: complex.rs  config.rs  cuda.cu  cuda.ptx  cuda.rs  main.rs  serial.rs  simd.rs
