[package]
name = "mandelbrot"
version = "0.1.0"
authors = ["Matthias Wolf <m@sushinara.net>"]
edition = "2018"

[features]
gpu = ["rustacuda"]

[dependencies]
image = "*"
num-complex = "*"
packed_simd = { version = "0.3.4", package = "packed_simd_2" }

[dependencies.rustacuda]
version = "0.1"
optional = true
